documentação e arrumando bugs
